--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "yargs": "^4.6.0"
   },
   "dependencies": {
-    "eslint": "^3.8.0",
-    "eslint-plugin-import": "^2.0.1",
+    "chai": "^3.5.0",
+    "hiredis": "^0.5.0",
+    "mongoose": "^4.6.3",
+    "mosca": "^2.2.0",
+    "mqtt": "^2.0.1",
     "phaser": "^2.4.7"
   }
 }
