--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "author": "Daniel Belohlavek",
   "license": "MIT",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browser-sync": "^2.12.3",
@@ -31,9 +32,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "vinyl-source-stream": "^1.1.0",
-    "yargs": "^4.6.0"
-  },
-  "dependencies": {
+    "yargs": "^4.6.0",
     "chai": "^3.5.0",
     "hiredis": "^0.5.0",
     "mongoose": "^4.6.3",
